[ticket/16763] fix imageset mine pip alignment
PHPBB3-16763

--- a/phpBB/styles/prosilver/theme/icons.css
+++ b/phpBB/styles/prosilver/theme/icons.css
@@ -90,11 +90,13 @@ blockquote cite:before,
 	border-radius: 50%;
 	position: absolute;
 	z-index: 101;
+	top: 50%;
 	left: 32px;
 	display: block;
 	float: left;
 	width: 8px;
 	height: 8px;
+	margin-top: -17px;
 }
 
 .row-item-sub {
